--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "start": "vite",
+    "start:5174": "vite --port 5174",
     "dev": "npm run start",
+    "serve": "vite preview",
+    "dev:5174": "npm run start:5174",
     "build": "vite build",
     "analyzer": "vite-bundle-visualizer && serve ./node_modules/.pnpm/vite-bundle-visualizer@0.6.0/node_modules/vite-bundle-visualizer",
     "g": "pnpm run generate-name-db",
@@ -30,8 +33,8 @@
     "file-saver": "^2.0.5",
     "knex": "^2.4.2",
     "opencc": "^1.1.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sqlite3": "^5.1.6",
     "valtio": "^1.7.6"
   },
