--- a/package.json
+++ b/package.json
@@ -26,35 +26,35 @@
     "h": "ts-node script/generate/fetch_fund_list.ts"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
-    "ahooks": "^3.7.2",
-    "antd": "^5.20.0",
-    "better-sqlite3": "^8.3.0",
+    "@ant-design/icons": "^6.1.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "ahooks": "^3.9.5",
+    "antd": "^5.27.5",
+    "better-sqlite3": "^12.4.1",
     "file-saver": "^2.0.5",
-    "knex": "^2.4.2",
-    "opencc": "^1.1.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sqlite3": "^5.1.6",
-    "valtio": "^1.7.6"
+    "knex": "^3.1.0",
+    "opencc": "^1.1.8",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "valtio": "^2.1.8"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.4",
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "^16.10.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "axios": "^1.4.0",
-    "cnchar": "^3.2.4",
-    "cnchar-radical": "^3.2.4",
-    "less": "^4.1.3",
-    "nodejieba": "^2.6.0",
-    "serve": "^14.2.0",
-    "ts-node": "^10.9.1",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^24.8.1",
+    "axios": "^1.12.2",
+    "cnchar": "^3.2.6",
+    "cnchar-radical": "^3.2.6",
+    "less": "^4.4.2",
+    "nodejieba": "^3.5.2",
+    "serve": "^14.2.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "vite": "^4.0.1",
-    "vite-bundle-visualizer": "^0.6.0"
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.10",
+    "vite-bundle-visualizer": "^1.2.1"
   }
 }
