--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-saver": "^2.0.5",
     "knex": "^3.1.0",
     "opencc": "^1.1.8",
+    "rc-virtual-list": "^3.19.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "valtio": "^2.1.8"
